(6/13/2013)
- Fixed disappearing tracker window.

(6/12/2013)
- Added separate overlay for tracking events and timers on camp
- Re-done how click-trough is handled

(6/9/2013)
- Added separate options window
- Main window can now be resized
- Added guild claim icons
- Added objective names

(6/2/2013)
- Remapped show/hide shortcut to "Home" key
- Added map title
- Added opacity slider
- Updated Eternal Battlegrounds map
- Updated icons for objectives
- Enabled update feature

(6/1/2013)
- Added always on top checkbox
- Main window can now be dragged around
- Removed redundant function calls
- Fixed and issue with disappearing window
- Replaced the icon to avoid confusion with GW2.exe

(5/31/2013)
- Initial Release