@@ -15,7 +15,8 @@ Usage
 Changes
 ============
 (6/13/2013)
-- Fixed disappearing tracker window.
+- Fixed code that caused claims not to trigger
+- Fixed disappearing tracker window
 
 (6/12/2013)
 - Added separate overlay for tracking events and timers on camp
