@@ -1,4 +1,5 @@
 (6/13/2013)
+- Fixed claims
 - Fixed disappearing tracker window.
 
 (6/12/2013)
